--- a/views/tools/gene_data.handlebars
+++ b/views/tools/gene_data.handlebars
@@ -39,7 +39,7 @@
 
                 <h2 style="text-align: center">Your Results</h2>
               </div>
-              {{#if data.genes}}
+              {{#if user.geneReportPurchase}}
               <div class="modal-body genotypes-can-do">
               {{#each data.genes}}
                 <p class="lead">We tested your genome for three SNPs (See Table Below) for Genes: {{diseases.0.diseasegenename}} and {{diseases.1.diseasegenename}} that have been shown to be associated with a risk of developing certain forms of Glaucoma, specifically: {{diseases.0.diseasename}} and {{diseases.8.diseasename}}. Your genotypes for Glaucoma are {{genotypes.rs28936694}}, {{genotypes.rs3825942}}, and {{genotypes.rs1048661}}. </p>
@@ -60,10 +60,11 @@
                 <p class="lead">Purchase a gene report to view your results.</p>
               </div>
               {{/if}}
+              
               <div class="modal-header">
               <h2>About The Disease</h2>
               </div>
-              {{#if data.genes}}
+              {{#if user.geneReportPurchase}}
               <div class="modal-body genotypes-can-do">
 
                   <p class="lead">Glaucoma is a group of eye diseases that damage the optic nerve (the bundle of nerve fibers that carries information from the eye to the brain) and can lead to vision loss and possibly blindness.</p>
@@ -87,7 +88,7 @@
               <div class="modal-header">
               <h2>What You Can Do</h2>
               </div>
-              {{#if data.genes}}
+              {{#if user.geneReportPurchase}}
               <div class="modal-body genotypes-can-do">
 
                 <p class="lead">Individuals at high risk for glaucoma should have a dilated-pupil eye examination at least every two years. Eye doctors use several tests to detect glaucoma.</p>
@@ -136,7 +137,7 @@
             <div class="modal-header">
               <h2>Your Results</h2>
             </div>
-            {{#if data.genes}}
+            {{#if user.geneReportPurchase}}
             <div class="modal-body genotypes-can-do">
               {{#each data.genes}}
                 <p class="lead">We tested your genome for two SNPs for the {{diseases.6.diseasegenename}} Gene. {{diseases.6.diseasegenename}} has been shown to be associated with a risk of developing certain forms of Stargardt's Disease, specifically: {{diseases.6.diseasename}}. Your genotypes for Stargardt's Disease are {{genotypes.rs61753034}} and {{genotypes.rs61753033}}.</p>
@@ -158,7 +159,7 @@
             <div class="modal-header">
             <h2>About The Disease</h2>
             </div>
-            {{#if data.genes}}
+            {{#if user.geneReportPurchase}}
             <div class="modal-body genotypes-can-do">
               <p class="lead">The most common cause of Stargardt’s is an autosomal recessive mutation in a gene called ABCA4. This gene normally facilitates transport of a “used” form of vitamin A out of photoreceptors, the light sensitive cells in the retina. Without ABCA4, this material builds up in the retina and contributes to the formation of lipofuscin.</p>
               <br>
@@ -175,7 +176,7 @@
             <div class="modal-header">
               <h2>What You Can Do</h2>
             </div>
-            {{#if data.genes}}
+            {{#if user.geneReportPurchase}}
             <div class="modal-body genotypes-can-do">
               <p class="lead">Individuals with a family history for Stargardt's Disease should try to obtain a clinical diagnosis through genetic testing. </p>
               <ul class="list-group">
@@ -219,7 +220,7 @@
             <div class="modal-header">
               <h2>Your Results</h2>
             </div> 
-            {{#if data.genes}}
+            {{#if user.geneReportPurchase}}
             <div class="modal-body genotypes-can-do">
                 <p class="lead">{{#each data.genes}}
                 <p class="lead">We tested your genome for five SNPs (See Table Below) for the {{diseases.2.diseasegenename}}, {{diseases.3.diseasegenename}}, {{diseases.4.diseasegenename}}, and {{diseases.5.diseasegenename}} Genes that have been shown to be associated with a risk of developing certain forms of ARMD, specifically: {{diseases.2.diseasename}}, {{diseases.4.diseasename}}, and {{diseases.5.diseasename}}. </p>
@@ -248,7 +249,7 @@
             <div class="modal-header">
               <h2>About The Disease</h2>
             </div>
-            {{#if data.genes}}
+            {{#if user.geneReportPurchase}}
             <div class="modal-body genotypes-can-do">
               <p class="lead">There are two forms of AMD: dry and wet. It is possible for a person to suffer from both forms and for the disease to progress slowly or rapidly.</p>
               <br>
@@ -269,7 +270,7 @@
             <div class="modal-header">
               <h2>What You Can Do</h2>
             </div>
-            {{#if data.genes}}
+            {{#if user.geneReportPurchase}}
             <div class="modal-body genotypes-can-do">
               <p class="lead">Several genes are believed to be strongly associated with the risk of developing AMD:</p>
               <br>
@@ -323,7 +324,7 @@
           <div class="modal-header">
             <h2></h2>
           </div>
-          {{#if data.genes}}
+          {{#if user.geneReportPurchase}}
           <div class="modal-body">
             <table class="table table-hover" id="table-genes-disease">
               <tbody>
@@ -525,7 +526,7 @@
 <div class="row">
   <div class="col-lg-12">
     <h2 id="your-genome-h2"><strong id="index-title">Your Genome</strong></h2>
-    {{#if data.genes}}
+    {{#if user.geneReportPurchase}}
     <p class="lead text-center">Your results are in the table below. We tested your genome for 10 genetic mutations of clinical relevance. This is not an exhaustive list, but a high level overview. The table will display for you base pairs (Your Genotype). Click on each Gene or SNP for more information.</p>
 
     <div class="wrap-snps table-responsive">
@@ -609,7 +610,7 @@
         Nutrition Support Protocol
       </a>
       <div class="collapse" id="collapseExample">
-      {{#if data.genes}}
+      {{#if user.geneReportPurchase}}
         <div class="well">
         <h2 class="list-group-item-heading">Lifestyle recommendations</h2>
           <ul class="list-group">
