--- a/views/tools/gene_data.handlebars
+++ b/views/tools/gene_data.handlebars
@@ -3,9 +3,7 @@
 </h1>
 {{#if user.geneReportPurchase}}
 <div class="modal-body genotypes-can-do"> 
-  <h2 class="lead" style="text-align: center">{{result.genotypes}}</h2>
-  <h2 class="lead" style="text-align: center">{{result.genotypes.rs1061170}}</h2>
-
+  <h2 class="lead" style="text-align: center">View your results below</h2>
 </div>
 {{else}} {{! If they don't pay for the gene test, display text below}}
 <div class="modal-body genotypes-can-do"> 
