--- a/views/tools/gene_data.handlebars
+++ b/views/tools/gene_data.handlebars
@@ -143,7 +143,7 @@
                 <p class="lead">We tested your genome for two SNPs for the {{diseases.6.diseasegenename}} Gene. {{diseases.6.diseasegenename}} has been shown to be associated with a risk of developing certain forms of Stargardt's Disease, specifically: {{diseases.6.diseasename}}. Your genotypes for Stargardt's Disease are {{genotypes.rs61753034}} and {{genotypes.rs61753033}}.</p>
 
                 <ul class="list-group">
-                  <li class="list-group-item lead">1. For {{diseases.6.snp}}, your Genotype is {{genotypes.rs61753034}}. Data show that this snp is  {{diseases.6.risk}}. The associated risk allele is (C). {{diseases.6.descr}} This snp is located on {{diseases.6.location}}.
+                  <li class="list-group-item lead">1. For {{diseases.6.snp}}, your Genotype is {{genotypes.rs61753034}}. Data show that this snp is  {{diseases.6.risk}} The associated risk allele is (C). {{diseases.6.descr}} This snp is located on {{diseases.6.location}}.
                   </li>
                   <li class="list-group-item lead">2. For {{diseases.7.snp}}, your Genotype is {{genotypes.rs61753033}}. Data show that this snp is {{diseases.7.risk}}. {{diseases.7.descr}}. The associated risk allele is (C). If you Genotype is '__', 23andMe was unable to accurately determine your genotype at that location. This snp is located on {{diseases.7.location}}.
                   </li> 
@@ -184,7 +184,7 @@
                 </li>
                 <li class="list-group-item lead"> Resources include: <br>
                 <a href="http://www.ncbi.nlm.nih.gov/variation/tools/1000genomes/?chr=NC_000001.10&from=94458392&to=94586704">1000 Genomes</a> <br>  <a href="http://www.ncbi.nlm.nih.gov/gtr/labs/279559/">The National Center for Biotechnology Information, U.S. National Library of Medicine</a> <br> 
-                <a href="http://www.centogene.com/genetic-testing/genetic-statistics/genetic-insights-ophthalmology.html">Centogene AG</a> on their website as a genetic resource.
+                <a href="http://www.centogene.com/genetic-testing/genetic-statistics/genetic-insights-ophthalmology.html">Centogene AG</a>
                 </li> 
                 <li class="list-group-item lead"> Cesarcells has several clinical trials that treat Stargardt's Disease. Click <a href="/tools/start-health-assessment">HERE</a> to see if you qualify.
                 </li>             
