--- a/views/tools/gene_data.handlebars
+++ b/views/tools/gene_data.handlebars
@@ -42,7 +42,7 @@
               {{#if user.geneReportPurchase}}
               <div class="modal-body genotypes-can-do">
               {{#each data.genes}}
-                <p class="lead">We tested your genome for three SNPs (See Table Below) for Genes: {{../diseases.0.diseasegenename}} and {{../diseases.1.diseasegenename}} that have been shown to be associated with a risk of developing certain forms of Glaucoma, specifically: {{../diseases.0.diseasename}} and {{../diseases.8.diseasename}}. Your genotypes for Glaucoma are {{genotypes.rs28936694}}, {{genotypes.rs3825942}}, and {{genotypes.rs1048661}}. </p>
+                <p class="lead">We tested your genome for three SNPs (See Table Below) for Genes: {{diseases.0.diseasegenename}} and {{diseases.1.diseasegenename}} that have been shown to be associated with a risk of developing certain forms of Glaucoma, specifically: {{diseases.0.diseasename}} and {{diseases.8.diseasename}}. Your genotypes for Glaucoma are {{genotypes.rs28936694}}, {{genotypes.rs3825942}}, and {{genotypes.rs1048661}}. </p>
 
                 <ul class="list-group">
                   <li class="list-group-item lead">1. For {{diseases.0.snp}}, your Genotype is {{genotypes.rs28936694}}. This snp is {{diseases.0.risk}} {{diseases.0.descr}} This snp is located on {{diseases.0.location}}.
@@ -575,7 +575,7 @@
       {{#each data.genes}}
         {{#each genotypes}}  
           
-        {{!-- {{#each ../diseases}} --}}
+        {{!-- {{#each diseases}} --}}
           <tr>
             
             {{!-- <td class="td-trials">{{diseasegenename}}</td> --}}
