--- a/views/tools/gene_data.handlebars
+++ b/views/tools/gene_data.handlebars
@@ -4,12 +4,17 @@
 {{#if user.geneReportPurchase}}
 <div class="modal-body genotypes-can-do"> 
   <h2 class="lead" style="text-align: center">View your results below</h2>
+  
 </div>
 {{else}} {{! If they don't pay for the gene test, display text below}}
 <div class="modal-body genotypes-can-do"> 
   <h2 class="lead" style="text-align: center"><a href="/charge">PURCHASE A GENE REPORT </a> to view your results.</h2>
+
 </div>
 {{/if}}
+
+
+
 <div class="container">
 
 
@@ -145,7 +150,7 @@
                 <ul class="list-group">
                   <li class="list-group-item lead">1. For {{diseases.6.snp}}, your Genotype is {{genotypes.rs61753034}}. Data show that this snp is  {{diseases.6.risk}} The associated risk allele is (C). {{diseases.6.descr}} This snp is located on {{diseases.6.location}}.
                   </li>
-                  <li class="list-group-item lead">2. For {{diseases.7.snp}}, your Genotype is {{genotypes.rs61753033}}. Data show that this snp is {{diseases.7.risk}}. {{diseases.7.descr}}. The associated risk allele is (C). If you Genotype is '__', 23andMe was unable to accurately determine your genotype at that location. This snp is located on {{diseases.7.location}}.
+                  <li class="list-group-item lead">2. For {{diseases.7.snp}}, your Genotype is {{genotypes.rs61753033}}. Data show that this snp is {{diseases.7.risk}} {{diseases.7.descr}}. The associated risk allele is (C). If you Genotype is '__', 23andMe was unable to accurately determine your genotype at that location. This snp is located on {{diseases.7.location}}.
                   </li> 
                  
                 </ul>
